syntax = "proto3";

package baremetalprovider;

option go_package = "github.com/siderolabs/talos-metal-agent/internal/providerpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message RebootMachineRequest {
  string id = 1;
}

message RebootMachineResponse {}

service ProviderService {
  rpc RebootMachine(RebootMachineRequest) returns (RebootMachineResponse);
}
